--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,16 @@
+apply plugin: 'java'
+apply plugin: 'maven'
+
+buildscript {
+    repositories {
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+    }
+}
+
+group = "com.github.8-Bit-Warframe"
+
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'org.jogamp.gluegen', name: 'gluegen-rt-main', version: '2.3.1'
